Fixed #38